syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

package administration;

option java_package = "ar.edu.itba.tp1g5";
option java_outer_classname = "emergencyCareServiceModel";
option java_multiple_files = true;

service EmergencyCareService {
  rpc StartEmergencyCare(StartEmergencyCareRequest) returns (EmergencyCareResponse);
  rpc EndEmergencyCare(EndEmergencyCareRequest) returns (EmergencyCareResponse);
}

message StartEmergencyCareRequest {
  int32 room = 1;
}

message EndEmergencyCareRequest {
  int32 room = 1;
  string doctorName = 2;
  string patientName = 3;
}

message EmergencyCareResponse {
  int32 room = 1;
  string doctorName = 2;
  string patientName = 3;
}

